--- a/style.css
+++ b/style.css
@@ -4,6 +4,33 @@
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
+.section-nav{
+     position: relative;
+    align-self: stretch;
+}
+aside{
+    flex-basis: 20%;
+    z-index: 99999;
+}
+aside ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+aside ul li{
+    
+    border: none !important;
+    border-radius: 0px 20px 20px 0px !important;
+}
+aside ul li a{
+    font-size: 0.8rem  !important ;
+}
+
+.left-content{
+    flex-basis: 100%;
+    max-width: 75vw;
+   
+}
 .user img{
     width: 100px;
     border-radius: 100%;
@@ -15,7 +42,7 @@
 
 .card{
     flex-basis: 45% !important;
-    min-width: 19em !important;
+    min-width: 23em !important;
     min-height: 250px !important;
     height: fit-content !important;
     border-radius: 7px  !important;
@@ -33,9 +60,49 @@
     font-size: 1em !important;
     border-radius: 0px 0px 7px 7px !important;
 }
+@media (max-width:1020px){
+    .body-with-nav{
+        flex-wrap: wrap !important;
+    }
+}
+
 @media (max-width:1000px){
+    .section-nav{
+        width: 100%;
+        overflow-x: scroll;
+        position: relative;
+        left: 0;
+        right: 0;
+    }
+    aside{
+        position: relative;
+        left: 0vw;
+        max-height: 10vh;
+        
+       
+    }
+    aside ul {
+        flex-direction: row !important;
+        position: absolute;
+
+
+        
+    }
+    aside ul li{
+        text-align: center;
+        position: relative;
+        top: 10px;
+        border-radius: 0px !important;
+        min-width: 250px;
+        margin: 0px 10px !important;
+    }
+    aside ul li a i{
+        display: none;
+    }
+    
+   
     .card{
-        flex-basis: 90% !important;
+        flex-basis: 100% !important;
     }
     .user h1{
         font-size: 1.7em;
